static/style.css
/* CSS variables */
:root {
  --color-bg: #fffcf2;
  --color-footer: #aaa;
  --color-text-main: #7e666e;
  --wrapper-height: 85vh;
  --wrapper-width: 600px;
  --font-family: "Merriweather";

  --accent-1: #52A5E9;
  --accent-2: #A99DFF;
  --accent-3: #FFA7CC;
  --accent-4: #FFB85E;
}

/* Reset */
* {
  box-sizing: border-box;
}
[hidden] {
  display: none !important;
}

/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
@font-face {
  font-family: HK Grotesk;
  src: url("fonts/HKGrotesk-Regular.otf") format("opentype");
}
@font-face {
  font-family: HK Grotesk;
  font-weight: bold;
  src: url("fonts/HKGrotesk-Bold.otf") format("opentype");
}


/* Page structure */
html, body {
  font-family: var(--font-family);
  font-optical-sizing: auto;
  background-color: var(--color-bg);
  color: var(--color-text-main);
  margin: 0;
  padding: 0;
}
main {
  margin: 0 auto;
  max-width: var(--wrapper-width);
  padding: 0 2rem;
  min-height: var(--wrapper-height);
  padding: 1rem 2rem 3rem;
}
body > footer {
  margin: 0 auto;
  max-width: var(--wrapper-width);
  padding: 0 2rem;
}

/* Navigation */
header {
  width: 100%;
  border-bottom: 3px solid;
  border-image: linear-gradient(90deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%) 1;
}
header nav { /* For all navigation, including pagination at bottom of blogs */
  margin: 0 auto;
  padding: 0 2rem;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: var(--wrapper-width);
  background: linear-gradient(90deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%);
  background-attachment: fixed;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
header a, header .active {
  font-size: 1.1rem;
  padding: 0.5rem;
  text-decoration: none;
  font-weight: bold;
  color: inherit;
  -webkit-text-fill-color: inherit;
}
/* this works by establishing a background that starts at the top left */
header .active::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: linear-gradient(90deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%);
  z-index: -1;
  pointer-events: none;
}
header .active {
  -webkit-mask: linear-gradient(#000 0 0);
  mask: linear-gradient(#000 0 0);
  -webkit-text-fill-color: var(--color-bg);
  color: var(--color-bg);
  a {
      color: var(--color-bg) !important;
  }
}

/* Typography */
p {
  margin: 0 0 1rem 0;
  line-height: 1.5;
  /* font-size: 1rem; */
}
h1, h2, h3, h4, h5, h6 {
  margin: 1.5rem 0 .8rem;
  font-family: var(--font-family);
  font-weight: 600;
  line-height: 1.1;
  color: var(--color-text-main);
}
td > h4 {
  margin-top: 0;
}
h1.title {
  font-size: 3rem;
  font-weight: 900;
  font-variation-settings: "wdth" 200;
  background: linear-gradient(45deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
h1.title.minwidth {
  flex-basis: min-content;
}
h1 {
  font-size: 2rem;
  background: -webkit-linear-gradient(45deg, var(--accent-1), var(--accent-3));
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  width: fit-content;
}
h2 {
  font-size: 2rem;
  color: var(--accent-1);
}
h3 {
  font-size: 1.5rem;
  color: var(--accent-2);
}
h4 {
  font-size: 1.25rem;
}
small,
.text_small {
  font-size: 0.8rem;
}
ul > li,
ol > li {
  margin-bottom: 0.75rem;
  line-height: 1.5;
  font-size: 1rem;
}
ul {
  padding: 0 0 0 18px;
  margin: 0;
}

/* Links */
a:link,
a:visited {
  /* text-decoration: none;
  border-bottom: 2px solid var(--accent-1); */
  color: var(--accent-1);
  font-weight: bold;
  text-underline-offset: 0.1rem;
  text-decoration-thickness: 0.08rem;
  text-decoration-skip-ink: all;
  text-decoration-color: var(--accent-1);
}
a:hover {
  /*text-decoration-color: var(--accent-3);*/
}
a:visited {
  color: var(--accent-2);
  text-decoration-color: var(--accent-2);
}
.de-emphasized {
  color: var(--color-footer);
  font-style: italic;
}

/* Home layout */
.page-title {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
}
.page-title.links {
  justify-content: space-between;
  gap: 0.05em 0;
  margin-bottom: 0.8rem;
}
.illustration {
  max-width: 8rem;
  object-fit: contain;
  height: auto;
}

/* Post */
.controls {
  margin: 3rem 0 0rem;
}
.post-metadata {
  color: var(--color-footer);
  a {
    color: var(--color-footer);
    text-decoration-color: var(--color-footer);
    font-weight: normal;
    text-decoration-thickness: 0.04rem;
  }
}

td {
  vertical-align: top;
}

/* Figures */
.figure {
  color: #888;
  font-size: 0.8rem;
  width: 300px;
  padding-bottom: 2rem;
}
.figure img {
  width: 100%;
  height: auto;
}

blockquote {
  font-style: italic;
  font-size: 1.1rem;
  margin-bottom: 1rem;
  border-left: 3px solid var(--accent-4);
  padding-left: 1rem;
  position: relative;
  footer {
    font-size: 1.0rem;
    font-style: normal;
    color: var(--color-footer);
    text-align: right;
  }
  footer::before {
    content: "— ";
  }
}
blockquote::before {
  content: "\201C";
  font-size: 3rem;
  color: var(--accent-4);
  position: absolute;
  top: -0.1em;
  left: -2.2rem;
}
/* blockquote:after {
  content: "\201D";
  font-size: 3rem;
  color: var(--accent-4);
  opacity: 0.4;
  position: absolute;
  bottom: -0.5rem;
  left: -2rem;
} */
blockquote.poem .indent {
  padding-left: 1.5rem;
}

footer {
  color: var(--color-footer);
  font-size: 0.7rem;
}
footer.page {
}

.post img {
  width: 100%;
  height: auto;
}
.image-strip img {
  width: auto !important;
  height: 8rem !important;
}

/* For posts that are embedded in the blog page */
section.post.embedded {
}
section.post.embedded::after {
  content: "";
  display: block;
  margin: 3rem auto;
  width: 100%;
  height: 1px;
  background: var(--color-footer);
  opacity: 0.3;
  border-radius: 2px;
}


nav.pagination { /* For all navigation, including pagination at bottom of blogs */
  display: flex;
  justify-content: space-between;
  width: 100%;
  a,span {
    padding: 0.5rem;
  }
}

